* GoogleMaps integration for contact page * fix font parsing errors * get fontawesome from CDN * get Lato font from CDN * minor fixes and improvements

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "compression": "^1.6.2",
+    "connect-modrewrite": "^0.10.1",
     "express": "^4.15.2",
     "helmet": "^3.5.0"
   }
