--- a/bower.json
+++ b/bower.json
@@ -12,11 +12,10 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-ui-router": "^0.4.2",
-    "angular-loading-bar": "^0.9.0",
     "angular-bootstrap": "^2.5.0",
     "angular-backtop": "*",
     "animate.css": "^3.5.2",
-    "components-font-awesome": "^4.7.0"
+    "ngmap": "^1.18.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
