--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular-bootstrap": "^2.5.0",
     "angular-backtop": "*",
     "animate.css": "^3.5.2",
-    "ngmap": "^1.18.4"
+    "ngmap": "^1.18.4",
+    "font-awesome": "4.7.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
